--- a/entregable8-clase16-primera-bbdd/public/index.html
+++ b/entregable8-clase16-primera-bbdd/public/index.html
@@ -22,7 +22,7 @@
     <hr>
 
     
-    <div class="container"><!-- div container -->
+    <div class="container my-3"><!-- div container -->
         <div class="row"><!-- div row -->
             
             <!-- DIV PRODUCTOS -->
