--- a/entregable8-clase16-primera-bbdd/public/index.html
+++ b/entregable8-clase16-primera-bbdd/public/index.html
@@ -28,7 +28,7 @@
             <!-- DIV PRODUCTOS -->
             <div class="col"> 
 
-                <div class="container p-5 bg-light">        
+                <div class="container p-5 bg-light shadow-lg">        
                     <h2>Ingrese productos</h2>
                     <!-- form productos -->
                     <form onsubmit="return addProductos(this)" class="border border-dark p-5">
@@ -67,7 +67,7 @@
             <!-- DIV CHAT -->
             <!-- <div class="col"> -->
 
-                <div class="container p-5 bg-light">
+                <div class="container p-5 bg-light shadow">
                     <h2>Centro de mensajes</h2>
 
                     <!-- form chat -->
